# star-scraper

./: .env  .gitignore  .npmrc  Cargo.toml  MIT-LICENSE.txt  README.md  bun.lockb  index.js  package.json  tsconfig.json
.github/workflows/: publish.yml  release-package.yml  run.yml  rust_stargazer_report.yml  stargazer_report.yml
src/: index.ts  main.rs
