[package]
name = "star-scraper"
description = "Utility to fetch info about GitHub stargazers"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
spinners = "4.1.0"
termimad = "0.14"