[package]
name = "star-scraper"
description = "Utility to fetch info about GitHub stargazers"
license = "MIT"
version = "0.1.4"
edition = "2021"
repository = "https://github.com/lineville/star-scraper"

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
spinners = "4.1.0"
termimad = "0.14"
octocrab = "0.18.1"
